[fixed] header search/refresh spacing.

--- a/src/client/header/header-styles.module.scss
+++ b/src/client/header/header-styles.module.scss
@@ -51,60 +51,67 @@ $menu-side-padding: 20px;
         }
     }
 
-    input.search {
-        color: white;
-        background-color: #32414c;
-        border: rgb(128, 128, 128) 1px solid;
-        border-radius: 4px;
-        font-family: "Open Sans", sans-serif;
-        padding: 0 10px;
-        max-width: 500px;
-        flex: 2;
-        margin: 0 10px;
+    .input-container {
+        flex: 1;
+        display: flex;
+        min-width: 500px;
+        max-width: 700px;
 
-        &:focus {
-            outline: none;
-            border-color: #5fb4f0;
-            color: #fff;
-            transition: all 0.2s ease-in-out;
-        }
-    }
+        input.search {
+            color: white;
+            background-color: #32414c;
+            border: rgb(128, 128, 128) 1px solid;
+            border-radius: 4px;
+            font-family: "Open Sans", sans-serif;
+            padding: 0 10px;
+            max-width: 500px;
+            flex: 2;
+            margin: 0 10px;
 
-    button.refreshGames {
-        cursor: pointer;
-        background: transparent;
-        box-shadow: none;
-        padding: 6px 12px;
-        font-size: 13px;
-        font-weight: 700;
-        color: #5fb4f0;
-        white-space: nowrap;
-        vertical-align: middle;
-        border: 1px solid #5fb4f0;
-        border-radius: 6px;
-        user-select: none;
-        appearance: none;
-        margin: 0 10px;
-
-        &:hover,
-        &:focus {
-            outline: none;
-            background-color: #5fb4f0;
-            color: #fff;
-            transition: all 0.2s ease-in-out;
+            &:focus {
+                outline: none;
+                border-color: #5fb4f0;
+                color: #fff;
+                transition: all 0.2s ease-in-out;
+            }
         }
 
-        &:active,
-        &.pseudo-active {
-            background-color: #b8daf3;
-            color: #8e7f7f;
-            transition: all 0.2s ease-in-out;
-        }
+        button.refreshGames {
+            cursor: pointer;
+            background: transparent;
+            box-shadow: none;
+            padding: 6px 12px;
+            font-size: 13px;
+            font-weight: 700;
+            color: #5fb4f0;
+            white-space: nowrap;
+            vertical-align: middle;
+            border: 1px solid #5fb4f0;
+            border-radius: 6px;
+            user-select: none;
+            appearance: none;
+            margin: 0 10px;
 
-        &:disabled {
-            opacity: 50%;
-            pointer-events: none;
-            cursor: not-allowed;
+            &:hover,
+            &:focus {
+                outline: none;
+                background-color: #5fb4f0;
+                color: #fff;
+                transition: all 0.2s ease-in-out;
+            }
+
+            &:active,
+            &.pseudo-active {
+                background-color: #b8daf3;
+                color: #8e7f7f;
+                transition: all 0.2s ease-in-out;
+            }
+
+            &:disabled {
+                opacity: 50%;
+                pointer-events: none;
+                cursor: not-allowed;
+            }
         }
     }
 
